[package]
name = "centrifuge-chain"
version = "0.10.27"
authors = ["Centrifuge <admin@centrifuge.io>"]
description = "Centrifuge chain implementation in Rust."
build = "build.rs"
edition = "2021"
license = "LGPL-3.0"
default-run = "centrifuge-chain"
homepage = "https://centrifuge.io/"
repository = "https://github.com/centrifuge/centrifuge-chain"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[badges]
travis-ci = { repository = "centrifuge/centrifuge-chain", branch = "master" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "centrifuge/centrifuge-chain" }
is-it-maintained-open-issues = { repository = "centrifuge/centrifuge-chain" }

[[bin]]
name = "centrifuge-chain"
path = "src/main.rs"

[dependencies]
# third-party dependencies
async-trait = "0.1"
clap = { version = "4.0.9", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0", default-features = false }
futures = "0.3.25"
hex-literal = "0.2.1"
jsonrpsee = { version = "0.16.2", features = ["server", "macros"] }
log = "0.4.8"
serde = { version = "1.0.119", features = ["derive"] }
url = "2.2.2"

# client dependencies
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-network-sync = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-service = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-keystore = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }

# Cli specific
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
try-runtime-cli = { git = "https://github.com/paritytech/substrate", optional = true, branch = "polkadot-v0.9.38" }

# Local dependencies
cfg-types = { path = "../libs/types" }
pallet-anchors = { path = "../pallets/anchors" }
pallet-pool-system = { path = "../pallets/pool-system" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }

# Cumulus dependencies
cumulus-client-cli = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.38" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.38" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.38" }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.38" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.38" }
cumulus-pallet-session-benchmarking = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.38" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.38" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.38" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.38" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.38" }

# Polkadot dependencies
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38" }

# node-specific dependencies
altair-runtime = { path = "../runtime/altair", default-features = false }
centrifuge-runtime = { path = "../runtime/centrifuge", default-features = false }
cfg-primitives = { path = "../libs/primitives" }
cfg-utils = { path = "../libs/utils" }
development-runtime = { path = "../runtime/development", default-features = false }
runtime-common = { path = "../runtime/common" }

# benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", optional = true, branch = "polkadot-v0.9.38" }

# integration testing
runtime-integration-tests = { path = "../runtime/integration-tests", optional = true, default-features = false }

# xcm
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.38" }

# frontier
fc-consensus = { git = "https://github.com/NunoAlexandre/frontier", default-features = false, branch = "moonbeam-polkadot-v0.9.38" }
fc-db = { git = "https://github.com/NunoAlexandre/frontier", default-features = false, branch = "moonbeam-polkadot-v0.9.38" }
fc-mapping-sync = { git = "https://github.com/NunoAlexandre/frontier", default-features = false, branch = "moonbeam-polkadot-v0.9.38" }
fc-rpc = { git = "https://github.com/NunoAlexandre/frontier", default-features = false, branch = "moonbeam-polkadot-v0.9.38" }
fc-rpc-core = { git = "https://github.com/NunoAlexandre/frontier", default-features = false, branch = "moonbeam-polkadot-v0.9.38" }
fp-consensus = { git = "https://github.com/NunoAlexandre/frontier", default-features = false, branch = "moonbeam-polkadot-v0.9.38" }
fp-rpc = { git = "https://github.com/NunoAlexandre/frontier", default-features = false, branch = "moonbeam-polkadot-v0.9.38" }
fp-storage = { git = "https://github.com/NunoAlexandre/frontier", default-features = false, branch = "moonbeam-polkadot-v0.9.38" }

[build-dependencies]
substrate-build-script-utils = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
vergen = "3.0.4"

[dev-dependencies]
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
getrandom = { version = "0.2", features = ["js"] }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-service-test = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
tempfile = "3.1.0"

[features]
default = ["std", "cli"]
std = [
  "serde/std",
  "sc-service/rocksdb",
  "substrate-build-script-utils",
  "altair-runtime/std",
  "centrifuge-runtime/std",
  "cfg-primitives/std",
  "cfg-types/std",
  "cfg-utils/std",
  "clap/std",
  "cumulus-primitives-core/std",
  "cumulus-primitives-parachain-inherent/std",
  "development-runtime/std",
  "fp-consensus/std",
  "fp-rpc/std",
  "fp-storage/std",
  "futures/std",
  "frame-benchmarking/std",
  "log/std",
  "pallet-anchors/std",
  "pallet-pool-system/std",
  "codec/std",
  "polkadot-primitives/std",
  "runtime-common/std",
  "sc-executor/std",
  "serde/std",
  "sp-api/std",
  "sp-block-builder/std",
  "sp-consensus-aura/std",
  "sp-core/std",
  "sp-io/std",
  "sp-keystore/std",
  "sp-offchain/std",
  "sp-runtime/std",
  "sp-session/std",
  "sp-timestamp/std",
  "sp-transaction-pool/std",
  "xcm/std",
  "cumulus-pallet-session-benchmarking/std",
  "fp-consensus/std",
  "fp-rpc/std",
  "fp-storage/std",
  "futures/std",
  "sp-io/std",
  "getrandom/std",
  "runtime-integration-tests/std",
]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "altair-runtime/runtime-benchmarks",
  "centrifuge-runtime/runtime-benchmarks",
  "development-runtime/runtime-benchmarks",
  "runtime-common/runtime-benchmarks",
  "polkadot-cli/runtime-benchmarks",
  "cfg-primitives/runtime-benchmarks",
  "cfg-types/runtime-benchmarks",
  "cfg-utils/runtime-benchmarks",
  "cumulus-pallet-session-benchmarking/runtime-benchmarks",
  "frame-benchmarking-cli/runtime-benchmarks",
  "pallet-anchors/runtime-benchmarks",
  "pallet-pool-system/runtime-benchmarks",
  "polkadot-primitives/runtime-benchmarks",
  "polkadot-service/runtime-benchmarks",
  "runtime-integration-tests/runtime-benchmarks",
  "sc-service/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
cli = [
  "try-runtime-cli",
]
try-runtime = [
  "cfg-primitives/try-runtime",
  "centrifuge-runtime/try-runtime",
  "altair-runtime/try-runtime",
  "development-runtime/try-runtime",
  "try-runtime-cli",
  "cfg-types/try-runtime",
  "cfg-utils/try-runtime",
  "pallet-anchors/try-runtime",
  "pallet-pool-system/try-runtime",
  "polkadot-cli/try-runtime",
  "polkadot-service/try-runtime",
  "runtime-common/try-runtime",
  'sp-runtime/try-runtime',
]

fast-runtime = [
  "altair-runtime/fast-runtime",
  "centrifuge-runtime/fast-runtime",
  "development-runtime/fast-runtime",
  "runtime-integration-tests/fast-runtime",
]

testnet-runtime = [
  "altair-runtime/testnet-runtime",
]
